--- a/app/Views/Home/Orders.cshtml
+++ b/app/Views/Home/Orders.cshtml
@@ -3,4 +3,11 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Orders placed:</p>
+
+@foreach (var order in ViewData["Orders"] as IEnumerable<app.Order>) {
+        
+    @order.Id
+
+    @order.Processed
+}
