--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model app.Models.BeerOrder
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Buy";
 }
 
 <div class="text-center">
