--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         { 
             @beer.Name
             <input type="hidden" name="BeerId" value="@beer.Id" />
-            <input type="submit" value="Buy"/>
+            <input type="submit" class="btn-primary" value="Buy"/>
         }
     }
 
