--- a/app/Views/Home/Orders.cshtml
+++ b/app/Views/Home/Orders.cshtml
@@ -5,7 +5,7 @@
 
 <p>Orders placed:</p>
 
-@foreach (var order in ViewData["Orders"] as IEnumerable<app.Order>) {
+@foreach (var order in ViewData["Orders"] as IEnumerable<Beershop.Order>) {
     
     @order.Id
 
